# gemstone-py

./: .gitignore  CHANGELOG.md  MIGRATIONS.md  PORTING_SCOPE.md  README.md  RELEASE_CHECKLIST.md  SELF_HOSTED_RUNNER.md  pyproject.toml
.github/benchmarks/: README.md  baseline.json  index.json
.github/workflows/: benchmarks.yml  ci.yml  live-destructive.yml  live.yml  post-release-verify.yml  release-dry-run.yml  release-testpypi.yml  release.yml  runner-health.yml
docs/: README.md  build_pdf_docs.py  cookbook.md  examples-guide.md  medium-article.md  pdf-theme.css  setup-guide.md  user-manual.md
docs/assets/: ATTRIBUTION.md
docs/funny-introduction/: README.md  part-01-why-gemstone-py-exists.md  part-02-sessions-and-transactions.md  part-03-persistent-root-and-friends.md  part-04-queries-stores-and-logs.md  part-05-web-apps-and-request-lifecycles.md  part-06-concurrency-conflicts-and-retries.md  part-07-benchmarks-releases-and-operator-survival.md
examples/: README.md  example.py  hello_gemstone.py
examples/django/myapp/: manage.py
examples/django/myapp/myapp/: __init__.py  settings.py  urls.py  wsgi.py
examples/django/myapp/posts/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
examples/django/myapp/posts/migrations/: 0001_initial.py  __init__.py
examples/django/myapp/posts/templates/posts/: form.html  index.html  show.html
examples/django/myapp/templates/: base.html
examples/django/myapp/templates/home/: index.html
examples/flask/: transaction_middleware.py
examples/flask/magtag/: magtag_app.py  models.py
examples/flask/object_inspector/: objectlog_app.py
examples/flask/sessions/: gemstone_sessions.py  msessions.py
examples/flask/simple_blog/: blog.py  blog_app.py  gemstone_model.py
examples/flask/simple_blog/templates/: blog.html  newpost.html  post.html  tag.html
examples/flask/sinatra_port/: app.py  test_app.py
examples/misc/: README.md  smalltalk_demo.py
examples/persistence/gstore/: main.py
examples/persistence/hat_trick/: add_rabbit_to_hat.py  create_hat.py  hat.py  peek.py  rabbit.py  show_hat_contents.py
examples/persistence/indexing/: create_random_people.py  index_example.py  search_random_people.py
examples/persistence/indexing/lib/: address.py  person.py
examples/persistence/kdtree/: kdtree.py  persist.py
examples/persistence/migrations/: blog_v1.py  blog_v2.py  migrate.py  migrate_by_chunks.py  write_posts.py
examples/persistence/migrations/point_migration/: migrate_v1_to_v2.py  point_v1.py  point_v2.py
examples/webstack/: magtag_app.py
examples/webstack/lib/: tweet.py  user.py
examples/webstack/templates/: debug.html  home.html  login.html  signup.html
gemstone_py/: __init__.py  _gci.py  _smalltalk_batch.py  api_contract.py  benchmark_baseline_register.py  benchmark_baselines.py  benchmark_compare.py  benchmarks.py  cli.py  client.py  concurrency.py  example_support.py  gsquery.py  gstore.py  migrations.py  objectlog.py  ordered_collection.py  persistent_root.py  release_metadata.py  session_facade.py  smalltalk_bridge.py  web.py
scripts/: actions.runner.macos.plist.template  bootstrap_self_hosted_runner.sh  install_self_hosted_runner_service.sh  run_benchmarks.sh  run_build_smoke.sh  run_ci_checks.sh  run_live_checks.sh
tests/: README.md  __init__.py  _support.py  test_api_contract.py  test_benchmark_baseline_register.py  test_benchmark_baselines.py  test_benchmark_compare.py  test_benchmarks.py  test_cli.py  test_client_failures.py  test_concurrency_batching.py  test_concurrency_session_utils.py  test_gemstone_multi_session.py  test_gemstone_request_session.py  test_gemstone_session_api.py  test_gemstone_sessions_interface.py  test_gsquery.py  test_gsquery_bulk.py  test_gstore_batching.py  test_instance_listing.py  test_live_integration.py  test_live_smoke.py  test_lock_helpers.py  test_magtag_session_batching.py  test_migrations.py  test_objectlog_parser.py  test_persistent_root_mapping.py  test_plain_gemstone_runtime.py  test_release_metadata.py  test_release_testpypi_workflow.py  test_sendable_wrappers.py  test_simple_blog_compat.py  test_simple_blog_session_batching.py  test_smalltalk_bridge.py  test_transaction_middleware.py  test_webstack_user_compat.py  test_workflow_configs.py
