[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gemstone-py"
version = "0.1.0"
description = "Direct Python-to-GemStone GCI bridge and translated persistence helpers."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "gemstone-py contributors"}]
dependencies = []

[project.scripts]
gemstone-examples = "gemstone_py.cli:main_entry"
gemstone-hello = "gemstone_py.cli:hello_entry"
gemstone-smalltalk-demo = "gemstone_py.cli:smalltalk_demo_entry"

[project.optional-dependencies]
dev = [
  "build>=1.0",
  "Flask>=2.3",
  "mypy>=1.10",
  "ruff>=0.6",
]

[tool.setuptools]
packages = ["gemstone_py"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
files = [
  "gemstone_py/__init__.py",
  "gemstone_py/session_facade.py",
  "gemstone_py/example_support.py",
  "gemstone_py/cli.py",
  "gemstone_py/client.py",
  "gemstone_py/web.py",
  "gemstone_py/persistent_root.py",
  "gemstone_py/gsquery.py",
  "gemstone_py/gstore.py",
  "gemstone_py/concurrency.py",
  "gemstone_py/objectlog.py",
]
follow_imports = "skip"
ignore_missing_imports = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "gemstone_py",
  "gemstone_py.session_facade",
  "gemstone_py.example_support",
  "gemstone_py.cli",
  "gemstone_py.objectlog",
]
strict = true

[[tool.mypy.overrides]]
module = [
  "gemstone_py.client",
  "gemstone_py.concurrency",
]
check_untyped_defs = true
disable_error_code = [
  "no-any-return",
  "no-untyped-call",
  "no-untyped-def",
  "union-attr",
]

[[tool.mypy.overrides]]
module = [
  "gemstone_py.gsquery",
  "gemstone_py.gstore",
]
check_untyped_defs = true
disable_error_code = [
  "no-any-return",
  "no-untyped-call",
  "no-untyped-def",
  "type-arg",
  "union-attr",
]

[[tool.mypy.overrides]]
module = [
  "gemstone_py.web",
]
check_untyped_defs = true
disable_error_code = [
  "no-any-return",
  "no-untyped-call",
  "no-untyped-def",
]

[[tool.mypy.overrides]]
module = [
  "gemstone_py.persistent_root",
]
check_untyped_defs = true
disable_error_code = [
  "no-any-return",
  "no-untyped-def",
]
