[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gemstone-py"
version = "0.2.3"
description = "Direct Python-to-GemStone GCI bridge and translated persistence helpers."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "gemstone-py contributors"}]
dependencies = [
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/unicompute/gemstone-py"
Repository = "https://github.com/unicompute/gemstone-py"
Issues = "https://github.com/unicompute/gemstone-py/issues"
Changelog = "https://github.com/unicompute/gemstone-py/blob/main/CHANGELOG.md"
RunnerGuide = "https://github.com/unicompute/gemstone-py/blob/main/SELF_HOSTED_RUNNER.md"

[project.scripts]
gemstone-benchmark-baseline-register = "gemstone_py.benchmark_baseline_register:main_entry"
gemstone-benchmark-compare = "gemstone_py.benchmark_compare:main_entry"
gemstone-benchmarks = "gemstone_py.benchmarks:main_entry"
gemstone-examples = "gemstone_py.cli:main_entry"
gemstone-hello = "gemstone_py.cli:hello_entry"
gemstone-smalltalk-demo = "gemstone_py.cli:smalltalk_demo_entry"

[project.optional-dependencies]
dev = [
  "build>=1.0",
  "Flask>=2.3",
  "mypy>=1.10",
  "ruff>=0.6",
]

[tool.setuptools]
packages = ["gemstone_py"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
files = [
  "gemstone_py/__init__.py",
  "gemstone_py/api_contract.py",
  "gemstone_py/benchmark_baseline_register.py",
  "gemstone_py/benchmark_baselines.py",
  "gemstone_py/benchmark_compare.py",
  "gemstone_py/release_metadata.py",
  "gemstone_py/_smalltalk_batch.py",
  "gemstone_py/benchmarks.py",
  "gemstone_py/session_facade.py",
  "gemstone_py/example_support.py",
  "gemstone_py/cli.py",
  "gemstone_py/client.py",
  "gemstone_py/web.py",
  "gemstone_py/persistent_root.py",
  "gemstone_py/gsquery.py",
  "gemstone_py/gstore.py",
  "gemstone_py/concurrency.py",
  "gemstone_py/objectlog.py",
]
follow_imports = "skip"
ignore_missing_imports = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "gemstone_py",
  "gemstone_py.api_contract",
  "gemstone_py.benchmark_baseline_register",
  "gemstone_py.benchmark_baselines",
  "gemstone_py.benchmark_compare",
  "gemstone_py.release_metadata",
  "gemstone_py._smalltalk_batch",
  "gemstone_py.benchmarks",
  "gemstone_py.session_facade",
  "gemstone_py.example_support",
  "gemstone_py.cli",
  "gemstone_py.objectlog",
]
strict = true

[[tool.mypy.overrides]]
module = [
  "gemstone_py.client",
]
strict = true

[[tool.mypy.overrides]]
module = [
  "gemstone_py.gsquery",
  "gemstone_py.gstore",
]
strict = true

[[tool.mypy.overrides]]
module = [
  "gemstone_py.concurrency",
]
strict = true

[[tool.mypy.overrides]]
module = [
  "gemstone_py.web",
]
strict = true

[[tool.mypy.overrides]]
module = [
  "gemstone_py.persistent_root",
]
strict = true
